# rt-da-btc

./: .gitignore  CMakeLists.txt
docs/: api.md  architecture_diagrams.md  data_analysis.md  thread_mechanics.md  tooling.md
inc/: run_cache.h  run_ingestor.h
inc/analysis/: IngressAnalytics.h  MeanFactoryKline.h  MeanResult.h  MedianFactoryKline.h  MedianResult.h  ModeFactoryKline.h  ModeResult.h  StdDevFactoryKline.h  StdDevResult.h  pipelineKline.h
inc/analysis/memory/: memoryManager.h  window.h
inc/analysis/statisticalEngine/: statisticalEngine.h
inc/cache/: memoryManager.h  run_cache.h  window.h
inc/cache/memory/: memoryManager.h  window.h
inc/ingestor/: B0.h  BinanceFactory.h  EventMeta.h  EventQueue.h  kline.h  run_ingestor.h
inc/ingestor/classes/: B0.h  BinanceFactory.h  EventMeta.h  EventQueue.h  EventTypes.h  kline.h
src/: main.cpp  run_cache.cpp  run_ingestor.cpp
src/analysis/: IngressAnalytics.cpp  MeanFactoryKline.cpp  MeanResult.cpp  MedianFactoryKline.cpp  MedianResult.cpp  ModeFactoryKline.cpp  ModeResult.cpp  StdDevFactoryKline.cpp  StdDevResult.cpp  pipelineKline.cpp
src/cache/: memoryManager.cpp  run_cache.cpp
src/cache/memory/: memoryManager.cpp
src/ingestor/: B0.cpp  BinanceFactory.cpp  EventQueue.cpp  kline.cpp  run_ingestor.cpp
src/ingestor/classes/: B0.cpp  BinanceFactory.cpp  EventQueue.cpp  kline.cpp
